opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/sexp_macro"
bug-reports: "https://github.com/janestreet/sexp_macro/issues"
dev-repo: "git+https://github.com/janestreet/sexp_macro.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "ppx_jane"
  "sexplib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Sexp macros

Sexp macros allow the user to define and use constants and simple functions in sexp files,
include one sexp file in another.
"
