opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_macro"
bug-reports: "https://github.com/janestreet/sexp_macro/issues"
dev-repo: "git+https://github.com/janestreet/sexp_macro.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_macro/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "core"
  "ppx_jane"
  "sexplib"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Sexp macros"
description: "
Sexp macros allow the user to define and use constants and simple functions in sexp files,
include one sexp file in another.
"
